--- a/projetos/Nova pasta/index.html
+++ b/projetos/Nova pasta/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiago Mafra</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -17,7 +18,7 @@
             
             <span class="insta-user">@thiago_milior26</span>
 
-            <div class="liks-container">
+            <div class="links-container">
 
                 <a href="#" class="links">Meu Site</a>
 
@@ -25,10 +26,10 @@
                     <img src="icones-redes-sociais/instagram-logo.png" alt="icone-intragram"> Instagram Principal</a>
 
                 <a href="https://instagram.com/ricardo_augustino?igshid=ZDdkNTZiNTM=" class="links">
-                    <img src="icones-redes-sociais/instagram-logo.png" alt="icone-intragram">Instagram FIT</a>
+                    <img src="icones-redes-sociais/instagram-logo.png" alt="icone-intragram"> Instagram FIT</a>
 
                 <a href="https://www.facebook.com/mafra.thiago" class="links">
-                    <img src="icones-redes-sociais/facebook-logo.png" alt="icone-facebook"> Facebook</a>
+                    <img src="icones-redes-sociais/facebook-logo.webp" alt="icone-facebook"> Facebook</a>
 
                 <a href="https://www.youtube.com/channel/UC0ib4GhLGNasC3FEwNj1ZkA" class="links"><img src="icones-redes-sociais/youtube-icone.png" alt="icone-youtube"> Canal do Youtube</a>
 
@@ -40,7 +41,7 @@
                     <img src="icones-redes-sociais/instagram-logo.png" alt="icone-intragram"></a>
                 
                 <a href="https://www.facebook.com/mafra.thiago" class="links">
-                    <img src="icones-redes-sociais/facebook-logo.png" alt="icone-facebook"></a>
+                    <img src="icones-redes-sociais/facebook-logo.webp" alt="icone-facebook"></a>
 
                 <a href="https://www.youtube.com/channel/UC0ib4GhLGNasC3FEwNj1ZkA" class="links"><img src="icones-redes-sociais/youtube-icone.png" alt="icone-youtube"></a>
 
