--- a/projetos/Nova pasta/index.html
+++ b/projetos/Nova pasta/index.html
@@ -20,30 +20,30 @@
 
             <div class="links-container">
 
-                <a href="#" class="links">Meu Site</a>
+                <a href="#" target="_blank" class="links banner">Meu Site</a>
 
-                <a href="https://instagram.com/thiago_milior26?igshid=ZDdkNTZiNTM=" class="links">
-                    <img src="icones-redes-sociais/instagram-logo.png" alt="icone-intragram"> Instagram Principal</a>
+                <a href="https://instagram.com/thiago_milior26?igshid=ZDdkNTZiNTM="  target="_blank" class="links">
+                    <img src="icones-redes-sociais/instagram-logo.png" alt="icone-intragram"> Instagram Oficial</a>
 
-                <a href="https://instagram.com/ricardo_augustino?igshid=ZDdkNTZiNTM=" class="links">
+                <a href="https://instagram.com/ricardo_augustino?igshid=ZDdkNTZiNTM=" target="_blank" class="links">
                     <img src="icones-redes-sociais/instagram-logo.png" alt="icone-intragram"> Instagram FIT</a>
 
-                <a href="https://www.facebook.com/mafra.thiago" class="links">
+                <a href="https://www.facebook.com/mafra.thiago" target="_blank" class="links">
                     <img src="icones-redes-sociais/facebook-logo.webp" alt="icone-facebook"> Facebook</a>
 
-                <a href="https://www.youtube.com/channel/UC0ib4GhLGNasC3FEwNj1ZkA" class="links"><img src="icones-redes-sociais/youtube-icone.png" alt="icone-youtube"> Canal do Youtube</a>
+                <a href="https://www.youtube.com/channel/UC0ib4GhLGNasC3FEwNj1ZkA" target="_blank" class="links"><img src="icones-redes-sociais/youtube-icone.png" target="_blank" alt="icone-youtube"> Canal do Youtube</a>
 
             </div>
 
             <div class="socials-container">
 
-                <a href="https://instagram.com/thiago_milior26?igshid=ZDdkNTZiNTM=" class="links">
-                    <img src="icones-redes-sociais/instagram-logo.png" alt="icone-intragram"></a>
+                <a href="https://instagram.com/thiago_milior26?igshid=ZDdkNTZiNTM=" target="_blank" class="links">
+                    <img src="icones-redes-sociais/instagram-logo.png" target="_blank"  alt="icone-intragram"></a>
                 
-                <a href="https://www.facebook.com/mafra.thiago" class="links">
+                <a href="https://www.facebook.com/mafra.thiago" target="_blank" class="links">
                     <img src="icones-redes-sociais/facebook-logo.webp" alt="icone-facebook"></a>
 
-                <a href="https://www.youtube.com/channel/UC0ib4GhLGNasC3FEwNj1ZkA" class="links"><img src="icones-redes-sociais/youtube-icone.png" alt="icone-youtube"></a>
+                <a href="https://www.youtube.com/channel/UC0ib4GhLGNasC3FEwNj1ZkA" target="_blank" class="links"><img src="icones-redes-sociais/youtube-icone.png" alt="icone-youtube"></a>
 
             </div>
 
