fim do capítulo

--- a/exercicios/ex025/form009.html
+++ b/exercicios/ex025/form009.html
@@ -10,8 +10,8 @@
     <form>
         <p>
             <label for="num">Selecione</label>
-            <input type="range" name="num" id="num" oninput="valor.innerHTML = (valor.value)">
-            <output name="valor" id="valor"></output>
+            <input type="range" name="num" id="num" oninput="valor.innerHTML = (num.value)">
+            <output name="valor" id="valor">50</output>
         </p>
     </form>
 </body>
