--- a/projetos/tela-de-cadastro/paginas/pagsignup001.html
+++ b/projetos/tela-de-cadastro/paginas/pagsignup001.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastre-se</title>
+    <link rel="stylesheet" href="../assets/css/estilo.css">
 </head>
 <body>
     <div class="container">
@@ -31,40 +32,57 @@
                 <div class="input-group">
 
                     <div class="input-box">
-                        <input type="text" name="firstname" id="firstname" required minlength="3" maxlength="20">
-                        <label for="firstname">Primeiro Nome</label>
+                        <input type="text" name="firstname" id="firstname" class="input-user" required minlength="3" maxlength="20">
+                        <label for="firstname" class="label-input">Primeiro Nome</label>
                     </div>
                     <div class="input-box">
-                        <input type="text" name="lastname" id="lastname" required minlength="4" maxlength="30">
-                        <label for="lastname">Sobrenome</label>
+                        <input type="text" name="lastname" id="lastname" class="input-user" required minlength="4" maxlength="30">
+                        <label for="lastname" class="label-input">Sobrenome</label>
                     </div>
                     <div class="input-box">
-                        <input type="text" name="email" id="email" required >
-                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email" class="input-user" required >
+                        <label for="email" class="label-input">Email</label>
                     </div>
                     <div class="input-box">
-                        <input type="tel" name="tel" id="tel" required minlength="11" maxlength="11">
-                        <label for="tel">Telefone</label>
+                        <input type="tel" name="tel" id="tel" class="input-user" required minlength="11" maxlength="11">
+                        <label for="tel" class="label-input">Telefone</label>
                     </div>
                     <div class="input-box">
-                        <input type="password" name="password" id="password" required minlength="8" maxlength="20">
-                        <label for="password">Senha</label>
+                        <input type="password" name="password" id="password" class="input-user" required minlength="8" maxlength="20">
+                        <label for="password" class="label-input">Senha</label>
                     </div>
                     <div class="input-box">
-                        <input type="password" name="confirm-password" id="confirm-password" required minlength="8" maxlength="20">
-                        <label for="confirm-password">Confirme sua senha</label>
+                        <input type="password" name="confirm-password" id="confirm-password" class="input-user" required minlength="8" maxlength="20">
+                        <label for="confirm-password" class="label-input">Confirme sua senha</label>
                     </div>
-                    <div class="input-box" >
-                        <legend>Sexo</legend>
-                        <input type="radio" name="gender" id="masculino" value="masculino">
-                        <label for="masculino">Masculino</label>
+                    <div class="input-radio" >
+                        <p>Sexo</p>
+                        <div>
+                            <input type="radio" name="gender" id="masculino" value="masculino">
+                            <label for="masculino">Masculino</label>
+                        </div>
 
-                        <input type="radio" name="gender" id="feminino" value="feminino">
-                        <label for="feminino">Feminino</label>
+                        <div>
+                            <input type="radio" name="gender" id="feminino" value="feminino">
+                            <label for="feminino">Feminino</label>
+                        </div>
 
-                        <input type="radio" name="gender" id="outro" value="outro">
-                        <label for="outro">Outro</label>                    
+                        <div>
+                            <input type="radio" name="gender" id="outro" value="outro">
+                            <label for="outro">Outro</label>
+                        </div>                    
                     </div>
+
+                    <div class="input-box">
+                        <select name="interesse" id="interesse" class="input-user" required>
+                            <option value="Homens">Homens</option>
+                            <option value="Mulheres">Mulheres</option>
+                            <option value="Outros">Outros</option>
+                        </select>
+                        <label for="interesse">Interessado (a) em:</label>
+                    </div>
+
+
                     <div class="input-box">
                         <label for="born">Data de Nascimento</label>
                         <input type="date" name="born" id="born" required>
@@ -74,7 +92,7 @@
                 </div>
 
                 <div class="send-button">
-                    <a href="pagsignup002.html">Continuar</a>
+                    <button><a href="pagsignup002.html">Continuar</a></button>
                 </div>
 
 
