estilo mobile first add

--- a/exercicios/ex026/mq005-menu-hamburguer/index.html
+++ b/exercicios/ex026/mq005-menu-hamburguer/index.html
@@ -23,6 +23,7 @@
 
     <main>
         <article>
+            <h2>Testando Media Queries</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus possimus cupiditate dignissimos tenetur, reiciendis magni alias minus in eum quia laudantium hic! Eaque, repellat sunt mollitia obcaecati quas provident? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab provident, hic suscipit facere neque obcaecati iure porro saepe esse ullam ratione enim laudantium, nesciunt officiis voluptate natus deserunt aut reiciendis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, voluptatem recusandae vero reiciendis id dicta temporibus nihil totam enim debitis modi error voluptatum quisquam odit. Atque quod quisquam error eligendi!</p>
             
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus possimus cupiditate dignissimos tenetur, reiciendis magni alias minus in eum quia laudantium hic! Eaque, repellat sunt mollitia obcaecati quas provident? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab provident, hic suscipit facere neque obcaecati iure porro saepe esse ullam ratione enim laudantium, nesciunt officiis voluptate natus deserunt aut reiciendis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, voluptatem recusandae vero reiciendis id dicta temporibus nihil totam enim debitis modi error voluptatum quisquam odit. Atque quod quisquam error eligendi!</p>
