--- a/exercicios/ex026/mq005-menu-hamburguer/index.html
+++ b/exercicios/ex026/mq005-menu-hamburguer/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burguer" onclick="clickMenu()" class="material-symbols-outlined">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -33,5 +35,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus possimus cupiditate dignissimos tenetur, reiciendis magni alias minus in eum quia laudantium hic! Eaque, repellat sunt mollitia obcaecati quas provident? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab provident, hic suscipit facere neque obcaecati iure porro saepe esse ullam ratione enim laudantium, nesciunt officiis voluptate natus deserunt aut reiciendis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, voluptatem recusandae vero reiciendis id dicta temporibus nihil totam enim debitis modi error voluptatum quisquam odit. Atque quod quisquam error eligendi!</p>
         </article>
     </main>
+
+    <script>
+        function clickMenu() {
+            if (itens.style.display == "block") {
+                itens.style.display = "none" 
+            } else {
+                itens.style.display = "block"
+            }
+        }
+    </script>
 </body>
 </html>
