--- a/exercicios/testes/index.html
+++ b/exercicios/testes/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div id="container">
@@ -19,6 +20,13 @@
         comprar
     </div>
 
+
+    
+    <div class="teste2">
+        <input type="checkbox"  id="acionador" class="acionador" name="acionador">
+        <label for="acionador" class="btncheck"><span id="burguer" onclick="clickMenu()" class="material-symbols-outlined">menu</span></label>
+        <p id="result" class="result">text</p>
+    </div>
 
 
 
@@ -142,6 +150,7 @@
 
 
     </div>
+
 
 </body>
 </html>
