--- a/projetos/landing-pages/landing-page-001/index.html
+++ b/projetos/landing-pages/landing-page-001/index.html
@@ -22,15 +22,16 @@
 
             </header>
 
-            <div>
-                <h1 class="texto-principal">
-                    People who care about your growth
-                </h1>
-            </div>
-
-            <div class="action-btn">
-                <a class="btn1" href="#">Get started</a>
-                <a class="btn2" href="#">Try platform for free</a>
+            <div class="foco">
+                <div>
+                    <h1 class="texto-principal">
+                        People who care about your growth
+                    </h1>
+                </div>
+                <div class="action-btn">
+                    <a class="btn1" href="#">Get started</a>
+                    <a class="btn2" href="#">Try platform for free</a>
+                </div>
             </div>
 
         </section>
