--- a/projetos/site-com-efeito-parallax/index.html
+++ b/projetos/site-com-efeito-parallax/index.html
@@ -8,8 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="#secao1">Seção 1</a>
+            <a href="#secao2">Seção 2</a>
+            <a href="#secao3">Seção 3</a>
+        </nav>
+    </header>
+
     <main>
-        <section class="parallax1">
+        <section id="secao1" class="parallax1">
             <h1>SITE COM EFEITO PARALLAX</h1>
         </section>
 
@@ -22,7 +30,7 @@
 
         </section>
 
-        <section class="parallax2">
+        <section id="secao2" class="parallax2">
             <h1>FOTO PARALLAX</h1>
         </section>
 
@@ -35,7 +43,7 @@
 
         </section>
 
-        <section class="parallax3">
+        <section id="secao3" class="parallax3">
             <h1>FOTO PARALLAX 3</h1>
         </section>
 
